# stellar-drips

./: .gitignore  Makefile  README.md  plan.md
.kiro/specs/soroban-pay/: .config.kiro  design.md  requirements.md  tasks.md
contracts/subscription/: Cargo.toml
contracts/subscription/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs
deploy/: deploy.sh
frontend/: .env.example  next.config.mjs  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: SubscriptionForm.tsx
frontend/src/constants/: network.ts
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: transaction_builder.ts  validation.ts  wallet_manager.ts
